<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BloodPressure</string>
    <string name="main_menu_1">Settings</string>
    <string name="main_menu_2">About</string>
    <string name="main_menu_3">Refresh</string>
    <string name="main_menu_4">Internal Log</string>
    
    <string name="main_card_measure_title">Measure</string>
    <string name="main_card_measure_indicator">Click to start</string>
    <string name="main_card_history_title">History</string>
    <string name="main_card_history_indicator">Check your measure history</string>
    <string name="main_card_help">Help and Support</string>

    <string name="til_error_inv_param">Invalid parameter</string>
    <string name="toast_copied">Copied</string>
    <string name="toast_perm_denied">Permission Denied</string>
    <string name="ad_pb">Yes</string>
    <string name="ad_nb">Cancel</string>
    <string name="ad_pb2">Yes</string>
    <string name="ad_nb2">No</string>
    <string name="ad_nb3">Close</string>
    <string name="ad_nb4">Clear</string>
    <string name="ad_processing">Processing…</string>
    <string name="empty_view">Empty</string>

    <!-- About -->
    <string name="au_l_1">Version</string>
    <string name="au_l_2">Developer</string>
    <string name="au_l_2_1">Alcatraz</string>
    <string name="au_l_3">Check sourcecode</string>
    <string name="au_l_4">Open source Licenses</string>
    <string name="au_l_4_1">Respect to opensource</string>
    <string name="au_osp">Opensource Projects</string>

    <!-- Blood pressure -->
    <!-- Device info -->
    <string name="hardware_title">Hardware Info</string>
    <string name="hardware_loading">Loading</string>
    <string name="hardware_version">Version</string>
    <string name="hardware_client">Vendor</string>
    <string name="hardware_type">Type</string>
    <string name="hardware_model">Model</string>
    <string name="hardware_serial">Serial</string>
    <!-- Process report -->
    <string name="process_heartbeat">Detected heartbeat: </string>
    <string name="process_pressure">Pressure: </string>
    <!-- Result report -->
    <string name="result_arrhythmia">Arrhythmia: </string>
    <string name="result_arteriosclerosis">Arteriosclerosis: </string>
    <string name="result_sbp">SBP: </string>
    <string name="result_dbp">DBP: </string>
    <string name="result_heart_rate">Heart rate: </string>
    <!-- Error report -->
    <string name="error_title">Error</string>
    <string name="error_unknown">Unknown</string>
    <!-- EOF report -->
    <string name="eof_title">EOF Packet</string>

    <string name="measure_control">Control</string>
    <string name="measure_ready">Ready</string>
    <string name="measure_error">Error</string>
    <string name="measure_processing">Measuring</string>
    <string name="measure_done">Done</string>
    <string name="measure_status">Status</string>

    <string name="history_menu_1">Clear history</string>
    <string name="history_clear_confirm">Are you sure to clear history</string>
    <string name="history_data_1">SBP/DBP: %d/%d, Heart rate: %d</string>
    <string name="history_data_2">Arrhythmia: %s, Arteriosclerosis: %s</string>

</resources>
