<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/device_info_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/hardware_title" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hardware_version_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/ic_multiline_chart_black_24dp"
                    app:tint="#E4979797" />

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/hardware_version_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hardware_version_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_version"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

                    <TextView
                        android:id="@+id/hardware_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_loading"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hardware_vendor_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/ic_baseline_people_alt_24"
                    app:tint="#E4979797" />

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/hardware_vendor_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hardware_vendor_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_client"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

                    <TextView
                        android:id="@+id/hardware_vendor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_loading"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hardware_type_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/ic_info_outline_black_24dp"
                    app:tint="#E4979797" />

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/hardware_type_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hardware_type_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_type"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

                    <TextView
                        android:id="@+id/hardware_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_loading"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hardware_model_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/ic_baseline_miscellaneous_services_24"
                    app:tint="#E4979797" />

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/hardware_model_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hardware_model_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_model"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

                    <TextView
                        android:id="@+id/hardware_model"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_loading"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/hardware_serial_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:srcCompat="@drawable/ic_baseline_menu_book_24"
                    app:tint="#E4979797" />

                <LinearLayout
                    android:layout_centerVertical="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/hardware_serial_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hardware_serial_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_serial"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

                    <TextView
                        android:id="@+id/hardware_serial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hardware_loading"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>