<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/measure_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="left|center"
        app:title="@string/main_card_measure_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/measure_card_controller"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:id="@+id/measure_control_bar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/pink_colorPrimary"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/measure_control_bar_image"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        app:srcCompat="@drawable/ic_baseline_medical_services_24"
                        app:tint="#ffffff" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_toRightOf="@id/measure_control_bar_image"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:text="@string/measure_control"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/measure_start"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="48dp"
                            android:layout_height="match_parent"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:src="@drawable/ic_baseline_play_arrow_24" />

                        <ImageButton
                            android:id="@+id/measure_stop"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="48dp"
                            android:layout_height="match_parent"
                            android:clickable="false"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:scaleX="0.8"
                            android:scaleY="0.8"
                            android:src="@drawable/ic_baseline_stop_24_invalid" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/measure_card_processing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_margin="16dp">

                            <ProgressBar
                                android:id="@+id/measure_card_processing_indicator_progress_bar"
                                style="?android:attr/progressBarStyle"
                                android:visibility="gone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <ImageView
                                android:id="@+id/measure_card_processing_indicator_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:srcCompat="@drawable/ic_check_green_24dp"
                                app:tint="#A5A5A5" />

                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginLeft="8dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/measure_status"
                                android:textAllCaps="false"
                                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
                                android:textSize="18sp" />

                        </LinearLayout>
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/measure_panel_ready"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <include layout="@layout/layout_ready" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/measure_panel_processing"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <include layout="@layout/layout_processing" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/measure_panel_error"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <include layout="@layout/layout_error" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/measure_panel_done"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <include layout="@layout/layout_done" />
                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>